// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic-handlebars.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script id="entry-template" type="text/x-handlebars-template">
  <div class="entry">
    <h1>{{title}}</h1>
    <div class="body">
      {{body}}
    </div>
  </div>
</script>

<div class="{{hello}} {{world}}"></div>

=====================================output=====================================
<script id="entry-template" type="text/x-handlebars-template">
  <div class="entry">
    <h1>
      {{title}}
    </h1>
    <div class="body">
      {{body}}
    </div>
  </div>
</script>
<div class="{{hello}} {{world}}"></div>
================================================================================
`;

exports[`comments.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class="entry">
  {{! This comment will not be in the output }}
  {{!-- This comment as }} and will not be in the output --}}
  <!-- This comment will be in the output -->
</div>

=====================================output=====================================
<div class="entry">
  {{! This comment will not be in the output }}
  {{!-- This comment as }} and will not be in the output --}}
  <!-- This comment will be in the output -->
</div>
================================================================================
`;

exports[`each.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div id="comments">
  {{#each comments}}
  <h2><a href="/posts/{{permalink}}#{{id}}">{{title}}</a></h2>
  <div>{{body}}</div>
  {{/each}}
</div>

=====================================output=====================================
<div id="comments">
  {{#each comments}}
    <h2>
      <a href="/posts/{{permalink}}#{{id}}">
        {{title}}
      </a>
    </h2>
    <div>
      {{body}}
    </div>
  {{/each}}
</div>
================================================================================
`;

exports[`if.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{#if title}}
  {{permalink}}
{{/if}}

=====================================output=====================================
{{#if title}}
  {{permalink}}
{{/if}}
================================================================================
`;

exports[`if-else.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<h1>
{{#if isAtWork}}
  Ship that code!
{{else if isReading}}
  You can finish War and Peace eventually...
{{else}}
  Go to bed!
{{/if}}
</h1>

<h2>
{{#if a}}
  A
{{else}}
  B
{{/if}}
</h2>


=====================================output=====================================
<h1>
  {{#if isAtWork}}
    Ship that code!
  {{else if isReading}}
    You can finish War and Peace eventually...
  {{else}}
    Go to bed!
  {{/if}}
</h1>
<h2>
  {{#if a}}
    A
  {{else}}
    B
  {{/if}}
</h2>
================================================================================
`;

exports[`nested-path.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class="entry">
  <h1>{{title}}</h1>
  <h2>By {{author.name}}</h2>

  <div class="body">
    {{body}}
  </div>
</div>

=====================================output=====================================
<div class="entry">
  <h1>
    {{title}}
  </h1>
  <h2>
    By
    {{author.name}}
  </h2>
  <div class="body">
    {{body}}
  </div>
</div>
================================================================================
`;

exports[`raw.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>{{{raw}}}</p>

=====================================output=====================================
<p>
  {{{raw}}}
</p>
================================================================================
`;
